added style in clock

--- a/DigitalClock/style.css
+++ b/DigitalClock/style.css
@@ -3,6 +3,7 @@ body{
     padding:0;
     box-sizing: border-box;
     font-family: poppins, sans-serif;
+    overflow: hidden;
 }
 .main{
     display:flex;
